--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,9 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:7.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.45'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
